[package]
name = "stock"
version = "0.1.0"
authors = ["m1cl <michael_ajala@yahoo.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
colored = "2.0.0"
prettytable-rs = "0.8.0"
termcolor = "1.1.2"
tokio = "0.3.5"
tokio-test = "0.3.0"
yahoo_finance_api = "1.0.2"
